--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<h2> UCID: mr669 </h2>
 </head>
 <body>
+	<h2> MY INTRODUCTION </h2>
+        <p> Hello!
 
+           I am Monisha Ramesh from the Business and Information Science Department. I have an undergrad degree in Information Science Engineering which allowed me to gain interest in this domain and learn about languages like Java, C, C++, SQL and more. I am looking forward to broaden my business and technical knowledge in my masters. Apart from this I enjoy swimming, travelling and socializing. Looking forward to a great experience. 
+       </p>
 </body>
 </html>
