--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<h1> <center> 10 HTML TAGS HOMEWORK2 </center></h1>
-	<h2> <center> UCID: mr669 </center></h2>
+	<h2> <center> UCID:mr669 </center></h2>
 </head>
 <body>
 	<h2> <i> MY INTRODUCTION </i> </h2>
         <p> Hello!
 
-           I am Monisha Ramesh from the Business and Information Science Department. I have an undergrad degree in Information Science Engineering which allowed me to gain interest in this domain and learn about languages like Java, C, C++, SQL and more. I am looking forward to broaden my business and technical knowledge in my masters. Apart from this I enjoy swimming, travelling and socializing. Looking forward to a great experience. 
+           I am Monisha Ramesh from the <b> Business and Information Science Department </b>. I have an undergrad degree in Information Science Engineering which allowed me to gain interest in this domain and learn about languages like Java, C, C++, SQL and more. I am looking forward to broaden my business and technical knowledge in my masters. Apart from this I enjoy swimming, travelling and socializing. Looking forward to a great experience. 
        </p>
-
+    
 </body>
 </html>
