6.added <ul>,<li>tags

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 
            I am Monisha Ramesh from the <b> Business and Information Science Department </b>. I have an undergrad degree in Information Science Engineering which allowed me to gain interest in this domain and learn about languages like Java, C, C++, SQL and more. I am looking forward to broaden my business and technical knowledge in my masters. Apart from this I enjoy swimming, travelling and socializing. Looking forward to a great experience. 
        </p>
-    <h2> Link to my first webpage for homework 1</h2>
-    <p> <a href= "https://web.njit.edu/~mr669/todo_2017Fall/"> MY FIRST WEBPAGE HW1 </a>
-
-     </p>
+    <h2> Link to my first webpage for Homework 1</h2>
+    <p> <a href= "https://web.njit.edu/~mr669/todo_2017Fall/"> MY FIRST WEBPAGE HW1 </a> </p>
+    <h2> Languages known </h2>
+        <ul>
+        	<li> Java </li>
+        	<li> PHP </li>
+        	<li> C, C++ </li>
+        	<li> SQL </li>
+            <li> HTML </li>
+        </ul>
     
 </body>
 </html>
