7.added <blockqoute> tag

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         	<li> SQL </li>
             <li> HTML </li>
         </ul>
-    
+    <h3> Favourite Quote </h3>
+    <p> <blockquote> "The future belongs to those who believe in the beauty of their dreams- Eleaner Roosevelt" </blockquote>
 </body>
 </html>
