--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<h1> <center> 10 HTML TAGS HOMEWORK2 </center></h1>
 	<h2> <center> UCID:mr669 </center></h2>
+	    <img src= "https://upload.wikimedia.org/wikipedia/commons/c/cf/Logo_of_New_Jersey_Institute_of_Technology.png">
 </head>
 <body>
 	<h2> <i> MY INTRODUCTION </i> </h2>
@@ -10,6 +11,7 @@
 
            I am Monisha Ramesh from the <b> Business and Information Science Department </b>. I have an undergrad degree in Information Science Engineering which allowed me to gain interest in this domain and learn about languages like Java, C, C++, SQL and more. I am looking forward to broaden my business and technical knowledge in my masters. Apart from this I enjoy swimming, travelling and socializing. Looking forward to a great experience. 
        </p>
+       <hr />	
     <h2> Link to my first webpage for Homework 1</h2>
     <p> <a href= "https://web.njit.edu/~mr669/todo_2017Fall/"> MY FIRST WEBPAGE HW1 </a> </p>
     <h2> Languages known </h2>
@@ -20,7 +22,7 @@
         	<li> SQL </li>
             <li> HTML </li>
         </ul>
-    <h3> Favourite Quote </h3>
+    <h2> Favourite Quote </h2>
     <p> <blockquote> "The future belongs to those who believe in the beauty of their dreams- Eleaner Roosevelt" </blockquote>
 </body>
 </html>
