10.added <div> tag

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
 	<h1> <center> 10 HTML TAGS HOMEWORK2 </center></h1>
 	<hr />
-	<h2> <center> UCID:mr669 </center></h2>
 	    <img src= "https://upload.wikimedia.org/wikipedia/commons/c/cf/Logo_of_New_Jersey_Institute_of_Technology.png">
+	    <style type = "text/css"> .mainsection {color:orange; text-align: center;} </style>
 </head>
 <body>
+    <div class= "mainsection">
+    MONISHA RAMESH<br />
+    UCID:mr669
+    EMAIL:mr669@njit.edu
+    </div>
+
 	<h2> <i> MY INTRODUCTION </i> </h2>
         <p> Hello!
 
